--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "nodeapp",
   "version": "0.0.1",
   "description": "NodeJS Server on Port 5000",
-  "author": "Ank maxine <ankit.maxine@rocketmail.com>",
-  "main": "index.js",
+  "author": "vignan <vignan.max@gmail.com>",
+  "main": "index.js", 
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "run-iptask": "node iptask.js"
   },
   "dependencies": {
     "express": "^4.16.1"
